changes made for hosting on heroku

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
 	<title></title>
 </head>
 <body>
-    <ul>Syn</ul>
+    <ul>Synonyms</ul>
     {% for value in dict_syns['synonyms'] %}
     <li>{{ value }}</li> 
     {% endfor %}
-    <ul>ant</ul>
+    <ul>Antonyms</ul>
     {% for value in dict_syns['antonyms'] %}
     <li>{{ value }}</li> 
     {% endfor %}
