--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-<form action="http://localhost:5000/result" method="POST">
+<form action="{{url_for('result')}}" method="POST">
 Input word:
 <input type="text" name="word"></br>
 <input type="submit" value="submit">
